[gd_scene load_steps=13 format=3 uid="uid://bmymcla08yo51"]

[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="1_2dhbq"]
[ext_resource type="Script" path="res://ui/main_menu/missions_tab.gd" id="1_5a3hb"]
[ext_resource type="Texture2D" uid="uid://dd2vfdo18d4tf" path="res://ui/main_menu/assets/textures/planet_marker.png" id="2_87oxx"]
[ext_resource type="Texture2D" uid="uid://bribge1j87rai" path="res://scenes/level_thumbnails/1id_thumbnail_mission.png" id="3_jtt8n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ios3k"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1f5mx"]
bg_color = Color(0.203922, 0.203922, 0.317647, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pndvo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytcqo"]
bg_color = Color(0.203922, 0.203922, 0.317647, 0)
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.501961)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8r476"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq8e6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvoic"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsf3s"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[node name="missions_tab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5a3hb")

[node name="content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentMarginContainer" type="MarginContainer" parent="content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="content/ContentMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Title" type="Control" parent="content/ContentMarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Label" type="Label" parent="content/ContentMarginContainer/VBoxContainer/Title"]
modulate = Color(1, 1, 1.3, 1)
layout_mode = 0
offset_right = 1792.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0.219608, 0.4, 0.745098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 64
text = "Select mission"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Title"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 97.0
offset_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mission_description" type="Panel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ios3k")

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 224
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1f5mx")

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.26

[node name="Title" type="RichTextLabel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_2dhbq")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "Mission"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Description" type="RichTextLabel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("1_2dhbq")
theme_override_font_sizes/normal_font_size = 16
text = "Text text text"
fit_content = true
scroll_active = false

[node name="Difficulty" type="RichTextLabel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("1_2dhbq")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Difficulty: "
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Thumbnail" type="TextureRect" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/mission_description/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("3_jtt8n")
expand_mode = 5
stretch_mode = 4

[node name="Buttons" type="Panel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pndvo")

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 16

[node name="Panel" type="Panel" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ytcqo")

[node name="MarginContainer" type="MarginContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="Mission1Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 1 
"

[node name="Mission2Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 2 "

[node name="Mission3Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 3"

[node name="Mission4Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 4"

[node name="Mission5Button" type="Button" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer/Control/HBoxContainer/Buttons/MarginContainer/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8r476")
theme_override_styles/normal = SubResource("StyleBoxFlat_rq8e6")
text = " Mission 5"

[node name="Control2" type="Control" parent="content/ContentMarginContainer/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="content/ContentMarginContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("1_2dhbq")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_nvoic")
theme_override_styles/normal = SubResource("StyleBoxFlat_hsf3s")
text = " Back "

[node name="mission_marker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1178.0
offset_top = 527.0
offset_right = 1589.0
offset_bottom = 769.0

[node name="MissionTextureRect" type="TextureRect" parent="mission_marker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_87oxx")

[node name="InfiniteLandingPosition" type="Control" parent="mission_marker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 100.0
offset_right = -269.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
